[gd_scene load_steps=8 format=3 uid="uid://cdy22pc6aontl"]

[ext_resource type="Script" path="res://scripts/gui/user_interface.gd" id="1_dt4qw"]
[ext_resource type="Texture2D" uid="uid://bm8rk0vq8c26g" path="res://sprites/progressbars/enemy_health_bar_background_000.png" id="1_ku8eu"]
[ext_resource type="Texture2D" uid="uid://c0vlmaosa1ukb" path="res://sprites/progressbars/enemy_health_bar_foreground_000.png" id="2_yqtru"]
[ext_resource type="Texture2D" uid="uid://byahqxtubai80" path="res://sprites/progressbars/enemy_health_bar_000.png" id="3_grksm"]
[ext_resource type="Texture2D" uid="uid://bpqwn1enqu3lb" path="res://sprites/progressbars/hungerbarProgress.png" id="3_ro0t5"]
[ext_resource type="Texture2D" uid="uid://d4j8dimofgnkm" path="res://sprites/progressbars/thirstbarProgress.png" id="4_7emtu"]
[ext_resource type="Script" path="res://scripts/gui/fps_label.gd" id="7_va6dj"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_dt4qw")

[node name="ProgressbarsPanel" type="Panel" parent="."]
offset_right = 131.0
offset_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="ProgressbarsPanel"]
layout_mode = 1
offset_right = 256.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)

[node name="HealthProgressBar" type="TextureProgressBar" parent="ProgressbarsPanel/VBoxContainer"]
layout_mode = 2
value = 80.0
texture_under = ExtResource("1_ku8eu")
texture_over = ExtResource("2_yqtru")
texture_progress = ExtResource("3_grksm")

[node name="HungerProgressBar" type="TextureProgressBar" parent="ProgressbarsPanel/VBoxContainer"]
layout_mode = 2
value = 50.0
texture_under = ExtResource("1_ku8eu")
texture_over = ExtResource("2_yqtru")
texture_progress = ExtResource("3_ro0t5")

[node name="ThirstProgressBar" type="TextureProgressBar" parent="ProgressbarsPanel/VBoxContainer"]
layout_mode = 2
value = 50.0
texture_under = ExtResource("1_ku8eu")
texture_over = ExtResource("2_yqtru")
texture_progress = ExtResource("4_7emtu")

[node name="FPSPanel" type="Panel" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 80.0
grow_vertical = 0

[node name="FPSLabel" type="Label" parent="FPSPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -11.5
offset_right = 33.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_va6dj")
